determine role based on class